# MyOwnTT

./: dune-project  myowntt.opam  readme.md
lib/: common.ml  conversion.ml  dune  eval.ml  exec.ml  lexer.mll  lexer_old.mll  parser.mly  parser_simple.mly  pretty.ml  semantics.ml  surface.ml  syntax.ml  typecheck.ml
